--- a/StockHub_Backend/appsettings.json
+++ b/StockHub_Backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "Topic": "stockPriceAlerts"
+  },
   "Redis": {
     "ConnectionString": "localhost:6379",
     "InstanceName": "StockHub_"
