stock data external apis

--- a/StockHub_Backend/appsettings.json
+++ b/StockHub_Backend/appsettings.json
@@ -15,6 +15,11 @@
     "ConnectionString": "localhost:6379",
     "InstanceName": "StockHub_"
   },
+  "YahooFinanceAPI": {
+    "BaseUrl": "https://apidojo-yahoo-finance-v1.p.rapidapi.com",
+    "RapidApiKey": "01207e2cb8msh4b75aa4c2667ea4p1f2a3djsn30f71919bb7",
+    "RapidApiHost": "apidojo-yahoo-finance-v1.p.rapidapi.com"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=BRIELLE28;Initial Catalog=StockHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
@@ -31,7 +36,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-       "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
