--- a/StockHub_Frontend--/package.json
+++ b/StockHub_Frontend--/package.json
@@ -13,6 +13,7 @@
     "@microsoft/signalr": "^8.0.7",
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.9.0",
+    "lucide-react": "^0.514.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
